<resources>
    <string name="app_name">MyLocation</string>

    <!--- MyLocationActivity用-->
    <string name="locationStart">測位開始</string>
    <string name="locationStop">測位停止</string>
    <string name="locationSetting">設定</string>

    <!--- SettingActivity用-->
    <string name="settingActIsCold">アシストデータ削除</string>

    <!---Setting用の項目 -->
    <string name="settingPrefName">MyLocationSetting</string>
    <string name="settingLocationType">LOCATIONTYPE</string>
    <string name="settingCount">COUNT</string>
    <string name="settingTimeout">TIMEOUT</string>
    <string name="settingInterval">INTERVAL</string>
    <string name="settingIsCold">isCold</string>
    <string name="settingSuplEndWaitTime">SUPLENDWAITTIME</string>
    <string name="settingDelAssistdataTime">DelAssistdataTime</string>

    <!---測位種別用の文字列定数 -->
    <string name="locationList">測位種別</string>
    <string name="locationUeb">UEB</string>
    <string name="locationUea">UEA</string>
    <string name="locationNw">NetworkProvider</string>
    <string name="locationFlp">FLP</string>
    <string name="locationiArea">OpeniArea</string>

    <!---測位結果をIntentで通知する場合の判別用のタグ-->
    <string name="TagisFix">isFix</string>
    <string name="TagLat">lattude</string>
    <string name="TagLong">longitude</string>
    <string name="Tagttff">TTFF</string>

    <!--ServiceからPresentationが受け取る値の種類-->
    <!--この値によってActivityに対する処理を変える-->
    <string name="category">category</string>
    <string name="categoryLocation">categoryLocation</string>
    <string name="categoryColdStart">CategoryColdStart</string>
    <string name="categoryColdStop">CategoryColdStop</string>
    <string name="categoryServiceEnd">CategoryServiceEnd</string>
</resources>
