<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="jp.sio.testapp.mylocation.Activity.MyLocationActivity">

    <Button
        android:id="@+id/buttonStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/locationStart"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/buttonStop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/locationStop"
        app:layout_constraintLeft_toRightOf="@+id/buttonStart"
        tools:layout_editor_absoluteY="0dp" />

    <Button
        android:id="@+id/buttonSetting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/locationSetting"
        app:layout_constraintLeft_toRightOf="@+id/buttonStop"
        tools:layout_editor_absoluteY="0dp" />

    <TextView
        android:id="@+id/textViewResult"
        android:layout_width="368dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/buttonStart"
        tools:layout_editor_absoluteX="8dp" />

    <TextView
        android:id="@+id/textViewSetting"
        android:layout_width="368dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewResult"
        tools:layout_editor_absoluteX="8dp" />

</android.support.constraint.ConstraintLayout>
