<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="jp.sio.testapp.mylocation.Activity.SettingActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="495dp"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settingCount" />

            <EditText
                android:id="@+id/editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number|numberSigned|numberDecimal"
                android:text="0"
                app:layout_constraintTop_toBottomOf="@+id/TextViewCount" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settingTimeout"
                app:layout_constraintTop_toBottomOf="@+id/editTextCount" />

            <EditText
                android:id="@+id/editText2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number|numberSigned|numberDecimal"
                android:text="0"
                app:layout_constraintTop_toBottomOf="@+id/TextViewTimeout" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settingInterval"
                app:layout_constraintTop_toBottomOf="@+id/editTextTimeout" />

            <EditText
                android:id="@+id/editText3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number|numberSigned|numberDecimal"
                android:text="0"
                app:layout_constraintTop_toBottomOf="@+id/TextViewInterval" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settingSuplEndWaitTime"
                app:layout_constraintTop_toBottomOf="@+id/editTextInterval" />

            <EditText
                android:id="@+id/editText4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/TextViewSuplEndWaitTime" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settingDelAssistdataTime"
                app:layout_constraintTop_toBottomOf="@+id/editTextSuplEndWaitTime" />

            <EditText
                android:id="@+id/editText5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/TextViewDelAssistDataTime" />

            <Button
                android:id="@+id/buttonSetting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="設定反映"
                app:layout_constraintTop_toBottomOf="@+id/editTextDelAssistDataTime" />
        </LinearLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>
